--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require" : {
-        "php" : "^5.5.36 || ^5.5.38",
+        "php" : "5.5.38 || 5.5.36",
         "ext-mbstring": "*"
     }
 }
